
  * Improved tiff support and tested it against a whole bunch of tiff images to
	make sure that it works. The following things were tested to determine
	their affect on the pdf viewers and the library (both xpdf and
	acrobat were tested as these seem to be the two major viewers).
	
	* Fillorder (MSB2LSB vs LSB2MSB)
	* Photometric interpretation (MINISWHITE vs MINISBLACK)
	* Number of strips (PDF only supports single strip tiffs)
	* Endian-ness (big endian vs little endian)

	The following are not currently tested because they cause strange
	errors from tiffcp (files much too small to be real):
	* Planar config (contiguous or separate)

        Feel free to send me some test images for this if you have some...

	The following compression schemes have been tested so far:
	* CCITT Fax Group 3
	* CCITT Fax Group 4

	The following compressions schemes are still not supported:
	* Uncompressed
	* Packbits
	* JPEG
	* zip (flate)
	* LZW (unsupported and should exit with an error message)

	If you find a tiff image that does not work, then please send me a copy
	so that I can test it to see what happens. If that is not possible,
	then please make sure you have libtiff installed and then run
	tiffinfo and tiffdump against the image and send me the output of that.
	I can be reached at mikal@stillhq.com...

	The testimages I used may be found in the testdata directory, and are
	generated using the makeimages script in that directory. To clean up,
	use the removeimages script.
  
  * Improved the doco about what fonts are always present based on the PDF spec		second edition, page 296.

  * The setfont(3) man page was just plain wrong. I don't know what I was
	thinking when I wrote it. It is now fixed.

  * The createfont(3) call, and the new createdefaultfont(3) calls are now
	documented.

  * My brain had stopped working, all tiffs should now work because I removed
	the silly bug.

  * Ensured that multiple tiffs and jpegs on the one page works as expected.