@@ -84,6 +84,7 @@ pdf *pdfopen_suppress (char *, char *);
 pdf *pdfopen_actual (char *, char *, int);
 void pdfclose (pdf *);
 page *pdfpage (pdf *, char *);
+void closeText (pdf *, object *);
 
 /******************************************************************************
   Objects.c
